[package]
name = "weapay"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes-gcm = {version = "0.10.3", features=["std"]}
openssl = "0.10.64"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.63"
[dev-dependencies]
dotenv = "0.15"
tokio= {version = "1.38.1" ,features = ["rt-multi-thread", "macros"] }
