[package]
name = "weapay"
version = "0.1.0"
edition = "2021"
authors = ["Jackie <wfits@126.com>"]
description = "A Rust SDK for Alipay and WeChat Pay based on v3"
keywords = ["alipay","wechat","v3"]
repository = "https://github.com/jackieit/weapay"
readme = "README.md"
license = "MIT"
[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
aes-gcm = {version = "0.10.3", features=["std"]}
openssl = "0.10.66"
reqwest = "0.12.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
dotenv = "0.15"
tokio= {version = "1.38.1" ,features = ["rt-multi-thread", "macros"] }
